Fix Responsivity Issue on Mobile

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -20,7 +20,7 @@
 .portfolio__item-image {
   border-radius: 1.5rem;
   overflow: hidden;
-  width: 420px;
+  width: 100%;
   height: 280px;
 }
 
@@ -48,6 +48,12 @@
   .portfolio__container {
     grid-template-columns: repeat(2, 1fr);
     gap: 1.2rem;
+  }
+  .portfolio__item-image {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 140px;
   }
 }
 
